# neskell

./: TechnicalNote.md  default.nix  flake.nix  hie.yaml  neskell.cabal
.github/workflows/: run-test.yaml
nix/: shell.nix
src/: Neskell.hs
src/Neskell/: CPU.hs  Memory.hs  Type.hs  Util.hs
src/Neskell/CPU/: AddressingMode.hs  Instruction.hs  Opcode.hs  OperationHandler.hs  Register.hs
src/Neskell/CPU/Opcode/: BRK.hs  LDA.hs  TAX.hs
src/Neskell/CPU/OperationHandler/: Absolute.hs  AbsoluteX.hs  AbsoluteY.hs  Accumulator.hs  Immediate.hs  Implied.hs  IndexedIndirect.hs  Indirect.hs  IndirectIndexed.hs  Relative.hs  ZeroPage.hs  ZeroPageX.hs  ZeroPageY.hs
src/Neskell/CPU/Register/: ProcessorStatus.hs
test/: tests.hs
test/Neskell/Test/: Arbitrary.hs  CPU.hs  CPUTest.hs  InterpretTest.hs  MemoryTest.hs  Util.hs
test/Neskell/Test/CPU/Opcode/: BRKTest.hs  LDATest.hs  TAXTest.hs
