cabal-version: 3.0
name:          neskell
version:       0.1.0.0
author:        924277+mtwtkman@users.noreply.github.com
maintainer:    mtwtkman
build-type:    Simple

common warnings
  ghc-options: -Wall

common basic
  build-depends:    base
  default-language: Haskell2010

executable neskell
  import:         warnings, basic
  main-is:        Main.hs
  build-depends:  neskell
  hs-source-dirs: app

library
  import:          warnings, basic
  hs-source-dirs:  src
  exposed-modules: Neskell
  other-modules:
    Neskell.CPU
    Neskell.CPU.AddressingMode
    Neskell.CPU.Instruction
    Neskell.CPU.Opcode
    Neskell.CPU.OperationHandler
    Neskell.CPU.OperationHandler.Absolute
    Neskell.CPU.OperationHandler.AbsoluteX
    Neskell.CPU.OperationHandler.AbsoluteY
    Neskell.CPU.OperationHandler.Accumulator
    Neskell.CPU.OperationHandler.Immediate
    Neskell.CPU.OperationHandler.Implied
    Neskell.CPU.OperationHandler.IndexedIndirect
    Neskell.CPU.OperationHandler.IndirectIndexed
    Neskell.CPU.OperationHandler.Relative
    Neskell.CPU.OperationHandler.ZeroPage
    Neskell.CPU.OperationHandler.ZeroPageX
    Neskell.CPU.OperationHandler.ZeroPageY
    Neskell.CPU.Register
    Neskell.CPU.Register.ProcessorStatus

test-suite test
  import:         warnings, basic
  type:           exitcode-stdio-1.0
  main-is:        tests.hs
  hs-source-dirs: test
  other-modules:  Neskell.Test.CPU
  build-depends:
    , HUnit
    , tasty
    , tasty-hunit
