cabal-version: 3.0
name:          neskell
version:       0.1.0.0
author:        924277+mtwtkman@users.noreply.github.com
maintainer:    mtwtkman
build-type:    Simple

common warnings
  ghc-options: -Wall

common basic
  build-depends:    base
  default-language: Haskell2010

executable neskell
  import:         warnings, basic
  main-is:        Main.hs
  build-depends:  neskell
  hs-source-dirs: app

library
  import:          warnings, basic
  hs-source-dirs:  src
  build-depends:   vector
  exposed-modules:
    Neskell
    Neskell.CPU
    Neskell.CPU.AddressingMode
    Neskell.CPU.Instruction
    Neskell.CPU.Opcode
    Neskell.CPU.Opcode.BRK
    Neskell.CPU.Opcode.LDA
    Neskell.CPU.Opcode.TAX
    Neskell.CPU.Register
    Neskell.CPU.Register.ProcessorStatus
    Neskell.Memory
    Neskell.Type

test-suite test
  import:         warnings, basic
  type:           exitcode-stdio-1.0
  main-is:        tests.hs
  hs-source-dirs: test
  build-depends:
    , HUnit
    , neskell
    , QuickCheck
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , vector

